Poprawiłem problem który się pojawiał gdy użytkownik bez logowania się wchodził na podstrony (poprzez adres). Zacząłem dodawać Layouty, dla podstron. Zmodyfikowałem działanie strony podstawowej by poprostu redirectowala do innych stron (głupio wygląda w nagłówku Default.aspx)

--- a/css/page.css
+++ b/css/page.css
@@ -289,3 +289,8 @@ a.medium-green								{	color: #568A02;	font-size: 16px;	text-decoration: none;	
 	border: solid 1px #4C6A02;
  }  
  
+ .left
+ {
+ 	float:left;
+ 	width:50%;
+ }
