--- a/PageLayouts/TwoColumnLayout.master
+++ b/PageLayouts/TwoColumnLayout.master
@@ -13,5 +13,6 @@
 	</div>	
 	<div class="left">
 		<asp:ContentPlaceHolder ID="mainContextColumn2" runat="server" />
-	</div>	
+	</div>
+	<div class="clear"></div>
 </asp:Content>
