--- a/trunk/SeppukuWeb/css/page.css
+++ b/trunk/SeppukuWeb/css/page.css
@@ -299,3 +299,73 @@ a.medium-green								{	color: #568A02;	font-size: 16px;	text-decoration: none;	
  {
  	clear:both;
  }
+ 
+ .medium-button
+{
+	display: block;
+	background-color: transparent;
+	background-image: url(images/mediumButton.bmp);
+	background-repeat: no-repeat;
+	width: 110px;
+	height: 40px;
+	margin: 5px auto;
+	padding: 5px 0 0 0;
+	text-align: center;
+	font-family: Helvetica, Calibri, Arial, sans-serif;
+	font-size: 15px;
+	font-weight: bold;
+	text-decoration: none;
+	color: #D5E3BE;
+	padding-top: 11px;
+}
+
+.medium-button:hover
+{
+	text-decoration: none;
+}
+
+
+.start-button
+{
+	display: block;
+	background-color: transparent;
+	background-image: url(images/bigButton.bmp);
+	background-repeat: no-repeat;
+	width: 163px;
+	height: 56px;
+	margin: 5px auto;
+	padding: 5px 0 0 0;
+	text-align: center;
+	font-family: Helvetica, Calibri, Arial, sans-serif;
+	font-size: 100%;
+	font-weight: bold;
+	text-decoration: none;
+	color: #D5E3BE;
+	padding-top: 20px;
+}
+
+.start-button:hover
+{
+	color: #D5E3BE;
+}
+
+.default-box
+{
+	width: 400px;
+	text-align: left;
+	margin-top: 0px;
+}
+
+.default-table
+{
+	
+}
+
+.default-textbox
+{
+	height: 25px;
+	width: 90%;
+	border: 1px;
+	border-style: solid;
+	border-color: #B3B3B3;
+}
