Całkiem spory update. Pojawił się nowy projekt w którym znajduje się kod mapy napisany w silverlight. Mapa ta jest dynamicznie kreowana na podstawie wartości zwróconych przez webservice seppuku toteż przed uruchomieniem trzeba się upewnić, że port na którym jest szukany webservice jest zgodny z portem który się otworzył przez server visuala.

--- a/SeppukuWeb/PageLayouts/TwoColumnLayout.master
+++ b/SeppukuWeb/PageLayouts/TwoColumnLayout.master
@@ -5,7 +5,7 @@
 	<asp:ContentPlaceHolder ID="head" runat="server" />
 </asp:Content>
 <asp:Content ID="menu" ContentPlaceHolderID="MainMenu" Runat="Server">
-	<uc1:loggedInMenu ID="UcLoggedInMenu" runat="server" />
+	<asp:ContentPlaceHolder ID="menu" runat="server" />
 </asp:Content>
 <asp:Content ID="mainContext" ContentPlaceHolderID="mainContent" Runat="Server">
 	<div class="left">
