--- a/SeppukuMap/SeppukuMap/App.xaml
+++ b/SeppukuMap/SeppukuMap/App.xaml
@@ -2,7 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
              x:Class="SeppukuMap.App"
              >
-    <Application.Resources>
-        
-    </Application.Resources>
+	<Application.Resources>
+		<ResourceDictionary/>
+	</Application.Resources>
 </Application>
