--- a/SeppukuMap/SeppukuMap/InfoPanel.xaml
+++ b/SeppukuMap/SeppukuMap/InfoPanel.xaml
@@ -1,9 +1,13 @@
 ﻿<UserControl x:Class="SeppukuMap.InfoPanel"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-    Width="450" Height="200">
+    Width="500" Height="120">
     <Canvas x:Name="LayoutRoot" Background="#FFD23434">
-    	<TextBlock Canvas.Left="8" Canvas.Top="8" Text="Some Text:" TextWrapping="Wrap"/>
-    	<TextBlock x:Name="TextBox" Canvas.Left="76" Canvas.Top="8" Text="TextBlock" TextWrapping="Wrap"/>
+    	<TextBlock Canvas.Left="8" Canvas.Top="8" TextWrapping="Wrap" Width="68" Text="Tile Name:"/>
+    	<TextBlock x:Name="TileName" Canvas.Left="76" Canvas.Top="8" Text="TextBlock" TextWrapping="Wrap"/>
+    	<TextBlock Canvas.Left="8" Canvas.Top="24" TextWrapping="Wrap"><Run Text="Owner's Name"/><Run Text=":"/></TextBlock>
+    	<TextBlock x:Name="PlayerName" Canvas.Left="98" Canvas.Top="24" Text="TextBlock" TextWrapping="Wrap"/>
+    	<TextBlock Canvas.Left="8" Canvas.Top="40" Text="Avaliable Workers:" TextWrapping="Wrap"/>
+    	<TextBlock x:Name="Workers" Canvas.Left="116" Canvas.Top="40" Text="TextBlock" TextWrapping="Wrap"/>
     </Canvas>
 </UserControl>
