--- a/SeppukuMap/SeppukuMap/ScrollButton.xaml
+++ b/SeppukuMap/SeppukuMap/ScrollButton.xaml
@@ -1,8 +1,9 @@
 ﻿<UserControl x:Class="SeppukuMap.ScrollButton"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-    Width="25" Height="150">
-    <Canvas x:Name="LayoutRoot" Background="Black">
-    	<Rectangle Fill="White" Stroke="Black" Height="13" Width="17" Canvas.Top="69"/>
+    Width="40" Height="80">
+    <Canvas x:Name="LayoutRoot">
+    	<Path Fill="Black" Stretch="Fill" Stroke="Black" Height="80" Width="40" UseLayoutRounding="False" Canvas.Top="0" Data="M110.5,40.5 C110.5,62.591389 85.875664,80.5 55.5,80.5 C55.5,80.5 55.5,0.5 55.5,0.5 C85.875664,0.5 110.5,18.408609 110.5,40.5 z"/>
+    	<Path Fill="White" Stretch="Fill" Stroke="Black" Height="13" Width="24.583" Canvas.Left="0.417" Canvas.Top="33" Data="M0.5,0.5 L16.5,0.5 L16.5,12.5 L0.5,12.5 L-7.0833735,6.6666665 z" UseLayoutRounding="False"/>
     </Canvas>
 </UserControl>
