--- a/SeppukuMap/SeppukuMap/OrdersList.xaml
+++ b/SeppukuMap/SeppukuMap/OrdersList.xaml
@@ -1,20 +1,25 @@
 ﻿<UserControl
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-    xmlns:local="clr-namespace:SeppukuMap" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" x:Class="SeppukuMap.OrdersList" 
-    Width="200" Height="120" mc:Ignorable="d">
+    xmlns:local="clr-namespace:SeppukuMap" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" xmlns:SeppukuMap_Model="clr-namespace:SeppukuMap.Model" x:Class="SeppukuMap.OrdersList" 
+    Width="350" Height="160" HorizontalAlignment="Center">
 	<UserControl.Resources>
 		<DataTemplate x:Key="ItemResource">
-			<Canvas Height="49" Width="157" d:DesignWidth="157">
-				<Rectangle Fill="#FF822222" Stroke="Black" Height="50" VerticalAlignment="Bottom" Width="158"/>
-				<TextBlock Text="TextBlock" TextWrapping="Wrap" Height="18" Width="125" Canvas.Left="15" Canvas.Top="16"/>
+			<Canvas Height="33" Width="320" d:DesignWidth="157">
+				<TextBlock TextWrapping="Wrap" Height="20" Width="67" Canvas.Left="66" FontSize="14" Text="{Binding Type, Mode=OneWay}" Canvas.Top="6" FontWeight="Bold"/>
+				<Image x:Name="OrderImage" Height="32" Width="32" OpacityMask="Black" Canvas.Left="30" Source="{Binding Image, Mode=OneWay}"/>
+				<Button Height="15" Width="15" Canvas.Left="8" Content="X" Click="onDeleteOrderClicked" Canvas.Top="10" FontSize="7"/>
+				<TextBlock TextWrapping="Wrap" Height="13" Width="104" Canvas.Left="208" FontSize="9" Text="{Binding SourceName, Mode=OneWay}" Canvas.Top="-1"/>
+				<TextBlock Height="13" Width="104" Canvas.Left="208" Canvas.Top="10" FontSize="9" Text="{Binding DestinationName, Mode=OneWay}" TextWrapping="Wrap"/>
+				<TextBlock TextWrapping="Wrap" Height="13" Width="104" Canvas.Left="208" Canvas.Top="21" FontSize="9" Text="{Binding UnitCount}"/>
+				<TextBlock Canvas.Left="161" Text="Source:" TextWrapping="Wrap" FontSize="9" FontWeight="Bold" Canvas.Top="-1"/>
+				<TextBlock Canvas.Left="137" Canvas.Top="10" FontSize="9" FontWeight="Bold" Text="Destination:" TextWrapping="Wrap"/>
+				<TextBlock Canvas.Left="169" Canvas.Top="21" Text="Units:" TextWrapping="Wrap" FontSize="9" FontWeight="Bold"/>
 			</Canvas>
 		</DataTemplate>
 	</UserControl.Resources>
     <Canvas x:Name="LayoutRoot" Background="#FF036E00">
 
-		<Button Height="20" Width="55" Content="Usuń"/>
-
-    	<ListBox x:Name="OrderList" ItemTemplate="{StaticResource ItemResource}" Height="100" Width="200" Canvas.Top="20"/>
+    	<ListBox x:Name="OrderList" ItemTemplate="{StaticResource ItemResource}" Height="160" Width="350" SelectionMode="Extended" SelectionChanged="SelectionChanged"/>
 	</Canvas>
 </UserControl>
