--- a/SeppukuMap/SeppukuMap/SeppukuMapScroll.xaml
+++ b/SeppukuMap/SeppukuMap/SeppukuMapScroll.xaml
@@ -2,14 +2,14 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
     xmlns:local="clr-namespace:SeppukuMap" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" x:Class="SeppukuMap.SeppukuMapScroll" 
-    Width="700" Height="500" mc:Ignorable="d">
+    Width="700" Height="510" mc:Ignorable="d">
 	<Canvas>
-		<Canvas x:Name="MapTilesView" Height="500" Width="700" Clip="M1.8141425,9.9920072E-16 C1.8141425,9.9920072E-16 700,9.9920072E-16 700,9.9920072E-16 C700,9.9920072E-16 698.18591,344.12686 698.18591,500 C698.18591,500 9.9920072E-16,500 9.9920072E-16,500 C9.9920072E-16,500 1.8141425,9.9920072E-16 1.8141425,9.9920072E-16 z">
+		<Canvas x:Name="MapTilesView" Height="510" Width="700" Clip="M1.8141425,-1.8873791E-15 C1.8141425,-1.8873791E-15 700,-1.8873791E-15 700,-1.8873791E-15 C700,-1.8873791E-15 698.18591,351.0094 698.18591,510 C698.18591,510 0,510 0,510 C0,510 1.8141425,-1.8873791E-15 1.8141425,-1.8873791E-15 z">
 			<local:SeppukuMapTiles x:Name="MapTiles" BorderBrush="Black" BorderThickness="0" Background="#FFFF4949" Height="{Binding Clip.Bounds.Height, ElementName=MapTiles, Mode=OneWay}" Width="{Binding Clip.Bounds.Width, ElementName=MapTiles, Mode=OneWay}" Canvas.Left="0"/>
 		</Canvas>
 		<Image x:Name="ZoomIn" Height="48" Width="48" Source="Resources/search48.png" Stretch="Fill"/>
-		<local:ScrollButton x:Name="ScrollLeft" Direction="left" d:LayoutOverrides="Width" Opacity="0.5" Height="80" Canvas.Top="197"/>
-		<local:ScrollButton x:Name="ScrollUp" RenderTransformOrigin="0.5,0.5" UseLayoutRounding="False" Canvas.Left="325" d:LayoutOverrides="Width, Height" d:LayoutRounding="Auto" Opacity="0.5" Canvas.Top="-20">
+		<local:ScrollButton x:Name="ScrollLeft" Direction="left" d:LayoutOverrides="Width" Opacity="0.5" Height="80" Canvas.Top="215"/>
+		<local:ScrollButton x:Name="ScrollUp" RenderTransformOrigin="0.5,0.5" UseLayoutRounding="False" Canvas.Left="330" d:LayoutOverrides="Width, Height" d:LayoutRounding="Auto" Opacity="0.5" Canvas.Top="-20">
 			<local:ScrollButton.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -19,7 +19,7 @@
 				</TransformGroup>
 			</local:ScrollButton.RenderTransform>
 		</local:ScrollButton>
-		<local:ScrollButton x:Name="ScrollRight" RenderTransformOrigin="0.5,0.5" Canvas.Left="660" Canvas.Top="197" Direction="right" d:LayoutOverrides="Width, Height" Opacity="0.5">
+		<local:ScrollButton x:Name="ScrollRight" RenderTransformOrigin="0.5,0.5" Canvas.Left="660" Canvas.Top="215" Direction="right" d:LayoutOverrides="Width, Height" Opacity="0.5">
 			<local:ScrollButton.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -29,7 +29,7 @@
 				</TransformGroup>
 			</local:ScrollButton.RenderTransform>
 		</local:ScrollButton>
-		<local:ScrollButton x:Name="ScrollDown" RenderTransformOrigin="0.5,0.5" UseLayoutRounding="False" Canvas.Left="325" Canvas.Top="440" Direction="down" d:LayoutOverrides="Width" d:LayoutRounding="Auto" Opacity="0.5">
+		<local:ScrollButton x:Name="ScrollDown" RenderTransformOrigin="0.5,0.5" UseLayoutRounding="False" Canvas.Left="330" Canvas.Top="450" Direction="down" d:LayoutOverrides="Width" d:LayoutRounding="Auto" Opacity="0.5">
 			<local:ScrollButton.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
