--- a/SeppukuMap/SeppukuMap/InfoPanel.xaml
+++ b/SeppukuMap/SeppukuMap/InfoPanel.xaml
@@ -1,13 +1,21 @@
-﻿<UserControl x:Class="SeppukuMap.InfoPanel"
+﻿<UserControl
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-    Width="350" Height="120">
-    <Canvas x:Name="LayoutRoot" Background="#FFD23434">
-    	<TextBlock Canvas.Left="8" Canvas.Top="8" TextWrapping="Wrap" Width="68" Text="Tile Name:"/>
-    	<TextBlock x:Name="TileName" Canvas.Left="76" Canvas.Top="8" Text="TextBlock" TextWrapping="Wrap"/>
-    	<TextBlock Canvas.Left="8" Canvas.Top="24" TextWrapping="Wrap"><Run Text="Owner's Name"/><Run Text=":"/></TextBlock>
-    	<TextBlock x:Name="PlayerName" Canvas.Left="98" Canvas.Top="24" Text="TextBlock" TextWrapping="Wrap"/>
-    	<TextBlock Canvas.Left="8" Canvas.Top="40" Text="Avaliable Workers:" TextWrapping="Wrap"/>
-    	<TextBlock x:Name="Workers" Canvas.Left="116" Canvas.Top="40" Text="TextBlock" TextWrapping="Wrap"/>
+    xmlns:local="clr-namespace:SeppukuMap" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" x:Class="SeppukuMap.InfoPanel" 
+    Width="350" Height="160" mc:Ignorable="d">
+    <Canvas x:Name="LayoutRoot">
+    	<Rectangle Stroke="Black" Height="160" Width="350"/>
+    	<Canvas x:Name="TileNameContainer" Height="20" Width="334" Visibility="Collapsed" Canvas.Left="8" Canvas.Top="12">
+    		<TextBlock Canvas.Left="1" TextWrapping="Wrap" Width="68" Text="Tile Name:" FontWeight="Bold"/>
+    		<TextBlock x:Name="TileName" Canvas.Left="135" Text="TextBlock" TextWrapping="Wrap"/>
+    	</Canvas>
+    	<Canvas x:Name="PlayerNameContainer" Height="20" Width="334" Visibility="Collapsed" Canvas.Left="8" Canvas.Top="36">
+    		<TextBlock TextWrapping="Wrap" FontWeight="Bold"><Run Text="Owner's Name"/><Run Text=":"/></TextBlock>
+    		<TextBlock x:Name="PlayerName" Canvas.Left="135" Text="TextBlock" TextWrapping="Wrap"/>
+    	</Canvas>
+    	<Canvas x:Name="WorkersContainer" Height="20" Width="334" Visibility="Collapsed" Canvas.Left="8" Canvas.Top="60">
+    		<TextBlock x:Name="Workers" Canvas.Left="135" Text="TextBlock" TextWrapping="Wrap"/>
+    		<TextBlock Text="Avaliable Workers:" TextWrapping="Wrap" FontWeight="Bold"/>
+    	</Canvas>
     </Canvas>
 </UserControl>
